Fixed the Contac Me borderline on the bottom due to overflow

--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -261,7 +261,7 @@ footer h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    
+    overflow: hidden;
 }
 
 .contactMe-title {
